fix overflow-wrap css so that it will work for all messages

--- a/style.css
+++ b/style.css
@@ -100,9 +100,9 @@ ul li {
   margin: 0;
   margin-left: 1em;
 }
-.text p {
+.text * {
   margin: 0;
-  word-wrap: break-word;
+  overflow-wrap: break-word;
   /*Note: In contrast to word-break, overflow-wrap (word-wrap is now an alias of overflow-wrap) will only create a break if an entire word cannot be placed on its own line without overflowing.
   https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-wrap
   
